--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,128 @@
+.mainContainer {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f5f5f5;
+}
+.headerContainer {
+  width: 100%;
+  height: 170px;
+  background-image: url('../public/assets/header.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .container {
   width: 100%;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffffff;
+}
+.title {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  color: #111111;
+  margin-bottom: 10%;
+}
+.input {
+  box-sizing: border-box;
+  border: 1px solid #bcbcbc;
+  border-radius: 5px;
+  width: 315px;
+}
+.inputImg {
+  border: none;
+  z-index: 998;
+}
+.dragAndDropConteiner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #bcbcbc;
+  width: 283px;
+  min-height: 163px;
+  border: 1px dashed #bcbcbc;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+.validationDragging {
+  color: #b700ff;
+}
+.imgContainer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+.btnLoadImg {
+  box-sizing: border-box;
+  color: #b700ff;
+  width: 160px;
+  height: 33px;
+  background: #ffffff;
+  border: 1px solid #b700ff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+.success {
+  height: 20px;
+  font-size: 1em;
+  margin-top: 5px;
+  color: green;
+  text-align: center;
+}
+.error {
+  text-align: center;
+  height: 20px;
+  font-size: 1em;
+  margin-top: 5px;
+  color: red;
+}
+.button {
+  margin-top: 100px;
+  margin-bottom: 20px;
+  width: 315px;
+}
+
+@media screen and (max-width: 480px) {
+  .mainContainer {
+    background-color: #ffffff;
+  }
+}
+@media screen and (min-width: 480px) {
+  .mainContainer {
+    justify-content: center;
+  }
+  .headerContainer {
+    background-image: url('../public/assets/headerDesktop.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #f5f5f5;
+  }
+  .container {
+    width: 473px;
+    min-height: 591px;
+    background: #ffffff;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+  }
+  .title {
+    margin-top: 30px;
+  }
 }
